--- a/index.html
+++ b/index.html
@@ -9,48 +9,59 @@
         <div id="app" class="container mx-auto mb-6">
             <h1 class="text-4xl mb-6">input-list</h1>
 
-            <input-list v-slot="{ index, isOdd, isEven, isFirstRow, isLastRow }">
-                <div class="mb-4">
-                    {{index}} - {{isOdd}} - {{isEven}} - {{isFirstRow}} - {{isLastRow}}
-                    <br>
+            <input-list :items="items" v-slot="{ index, isOdd, isEven, isFirstRow, isLastRow, item, add, remove }" class="flex flex-col gap-4">
+                <div class="p-4 rounded relative" :class="{'bg-slate-100': isOdd, 'bg-slate-200': isEven}">
+                    <button @click="remove" class="absolute right-0 top-0 translate-x-1/2 -translate-y-1/2 text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 h-6 w-6 rounded-full flex items-center justify-center">
+                        &minus;
+                    </button>
+
                     <input
-                        v-model="titles[index]"
+                        v-model="item.title"
                         placeholder="Title"
                         :data-index="index"
-                        class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-3 focus:ring focus:border-blue-500"
-                        @remove="e => titles.splice(index, 1)"
+                        class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-2 focus:ring focus:border-blue-500"
                     />
                     <input
-                        v-model="names[index]"
+                        v-model="item.name"
                         placeholder="Name"
                         :data-index="index"
-                        class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-3 focus:ring focus:border-blue-500"
-                        @remove="e => names.splice(index, 1)"
+                        class="w-full px-2 py-1 outline-none rounded border border-gray-400 focus:ring focus:border-blue-500"
                     />
+                </div>
+
+                <div v-if="isLastRow" class="mt-2 flex justify-end">
+                    <button
+                        class="text-lg text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 w-8 h-8 rounded-full flex items-center justify-center"
+                        @click="add({name: null, title: null})">
+                        &plus;
+                    </button>
                 </div>
             </input-list>   
         </div>
 
         <script type="module">
             import './index.css';
-            import Vue from 'vue/dist/vue';
-            import { InputList } from './index.js';
+            import { createApp } from 'vue/dist/vue.esm-bundler.js';
+            import { InputList } from './index.ts';
             
-            Vue.config.devtools = false;
-            Vue.config.productionTip = false;
-
-            const vue = new Vue({
-                el: '#app',
+            const vue = createApp({
                 components: {
                     InputList
                 },
                 data() {
                     return {
-                        titles: [],
-                        names: []
+                        items: [{
+                            title: 1,
+                            name: 2
+                        }, {
+                            title: 3,
+                            name: 4
+                        }]
                     };
                 }
             });
+
+            vue.mount('#app');
         </script>
     </body>
 </html>
