Updates for vue3

--- a/index.html
+++ b/index.html
@@ -9,44 +9,56 @@
         <div id="app" class="container mx-auto mb-6">
             <h1 class="text-4xl mb-6">input-list</h1>
 
-            <input-list :items="items" v-slot="{ index, isOdd, isEven, isFirstRow, isLastRow, item, add, remove }" class="flex flex-col gap-4">
-                <div class="p-4 rounded relative" :class="{'bg-slate-100': isOdd, 'bg-slate-200': isEven}">
-                    <button @click="remove" class="absolute right-0 top-0 translate-x-1/2 -translate-y-1/2 text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 h-6 w-6 rounded-full flex items-center justify-center">
-                        &minus;
-                    </button>
+            <input-list :items="items" class="flex flex-col gap-4">
+                <template #default="{ index, isOdd, isEven, isFirstRow, isLastRow, item, add, remove }">
+                    <div class="p-4 rounded relative" :class="{'bg-slate-100': isOdd, 'bg-slate-200': isEven}">
+                        <button @click="remove" class="absolute right-0 top-0 translate-x-1/2 -translate-y-1/2 text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 h-6 w-6 rounded-full flex items-center justify-center">
+                            &minus;
+                        </button>
 
-                    <input
-                        v-model="item.title"
-                        placeholder="Title"
-                        :data-index="index"
-                        class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-2 focus:ring focus:border-blue-500"
-                    />
-                    <input
-                        v-model="item.name"
-                        placeholder="Name"
-                        :data-index="index"
-                        class="w-full px-2 py-1 outline-none rounded border border-gray-400 focus:ring focus:border-blue-500"
-                    />
-                </div>
+                        <input
+                            v-model="item.title"
+                            placeholder="Title"
+                            :data-index="index"
+                            class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-2 focus:ring focus:border-blue-500"
+                        />
+                        <input
+                            v-model="item.name"
+                            placeholder="Name"
+                            :data-index="index"
+                            class="w-full px-2 py-1 outline-none rounded border border-gray-400 focus:ring focus:border-blue-500"
+                        />
+                    </div>
+                    <div v-if="isLastRow" class="mt-2 flex justify-end">
+                        <button
+                            class="text-lg text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 w-8 h-8 rounded-full flex items-center justify-center"
+                            @click="add({name: null, title: null})">
+                            &plus;
+                        </button>
+                    </div>
+                </template>
 
-                <div v-if="isLastRow" class="mt-2 flex justify-end">
-                    <button
-                        class="text-lg text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 w-8 h-8 rounded-full flex items-center justify-center"
-                        @click="add({name: null, title: null})">
-                        &plus;
-                    </button>
-                </div>
+                <template #fallback="{ add }">
+                    <div class="flex items-center gap-2n">
+                        <p>You have no rows!</p>
+                        <button
+                            class="text-sm py-1 px-2 rounded text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 flex items-center justify-center"
+                            @click="add({name: null, title: null})">
+                            &plus; Add Row
+                        </button>
+                    </div>
+                </template>
             </input-list>   
         </div>
 
         <script type="module">
-            import './index.css';
             import { createApp } from 'vue/dist/vue.esm-bundler.js';
             import { InputList } from './index.ts';
-            
+            import './index.css';
+
             const vue = createApp({
                 components: {
-                    InputList
+                    InputList,
                 },
                 data() {
                     return {
