--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
                             :data-index="index"
                             class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-2 focus:ring focus:border-blue-500"
                         />
-                        <input
+                        <input-field
                             v-model="item.name"
                             placeholder="Name"
-                            :data-index="index"
-                            class="w-full px-2 py-1 outline-none rounded border border-gray-400 focus:ring focus:border-blue-500"
-                        />
+                        ></input-field>
                     </div>
                     <div v-if="isLastRow" class="mt-2 flex justify-end">
                         <button
@@ -54,11 +52,13 @@
         <script type="module">
             import { createApp } from 'vue/dist/vue.esm-bundler.js';
             import { InputList } from './index.ts';
+            import { InputField } from '@vue-interface/input-field';
             import './index.css';
 
             const vue = createApp({
                 components: {
                     InputList,
+                    InputField
                 },
                 data() {
                     return {
