--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 
             <input-list :items="items" class="flex flex-col gap-4">
                 <template #default="{ index, isOdd, isEven, isFirstRow, isLastRow, item, add, remove }">
-                    <div class="p-4 rounded relative" :class="{'bg-slate-100': isOdd, 'bg-slate-200': isEven}">
+                    <div class="p-4 rounded relative flex flex-col gap-4" :class="{'bg-slate-100': isOdd, 'bg-slate-200': isEven}">
                         <button @click="remove" class="absolute right-0 top-0 translate-x-1/2 -translate-y-1/2 text-slate-600 bg-slate-300 focus:ring-2 ring-slate-400 h-6 w-6 rounded-full flex items-center justify-center">
                             &minus;
                         </button>
-
-                        <input
+                        <input-field
                             v-model="item.title"
                             placeholder="Title"
                             :data-index="index"
-                            class="w-full px-2 py-1 outline-none rounded border border-gray-400 mb-2 focus:ring focus:border-blue-500"
-                        />
+                        ></input-field>
                         <input-field
                             v-model="item.name"
                             placeholder="Name"
